@@ -16,6 +16,10 @@
  *
  *	Note: this code uses "wildmat.c", which has different copyright
  *	and licensing conditions.  See the source, Luke.
+ *
+ *
+ *  2011: getsdir() has been simplified wrt memory management by
+ *        Adam Lackorzynski
  */
 #ifdef HAVE_CONFIG_H
 #include <config.h>
@@ -43,15 +47,73 @@ typedef struct dat_buf {		/* structure of input buffers */
   GETSDIR_ENTRY data[MAX_CNT];		/* data in present buffer */
 } DAT_BUF;
 
-static DAT_BUF *datb_frst;		/* pointer to first data buffer */
-static DAT_BUF *datb_cur;		/* pointer to current data buffer */
 static int g_sortflags;			/* sort flags */
 
 /* sort compare routines */
-static int namecmpr(GETSDIR_ENTRY *d1, GETSDIR_ENTRY *d2);
-static int timecmpr(GETSDIR_ENTRY *d1, GETSDIR_ENTRY *d2);
 
-static void free_up(void);	/* free-up used memory */
+/*
+ * name:	namecmpr
+ *
+ * purpose:	return stat to qsort on comparison between name fields in
+ *		directory entry.
+ *
+ * synopsis:	static in namecmpr(d1, d2)
+ *		GETSDIR_ENTRY *d1;
+ *		GETSDIR_ENTRY *d2;
+ *
+ * input:	See explanation of qsort
+ *
+ * process:	See explanation of qsort
+ *
+ * output:	See explanation of qsort
+ *
+ * notes:	See explanation of qsort
+ */
+static int namecmpr(GETSDIR_ENTRY *d1, GETSDIR_ENTRY *d2)
+{
+  if (g_sortflags & (GETSDIR_DIRSF | GETSDIR_DIRSL)) {
+    if (S_ISDIR((d1->mode)) && !S_ISDIR((d2->mode)))
+      return (g_sortflags & GETSDIR_DIRSF) ? -1 : 1;
+    else if (S_ISDIR((d2->mode)) && ! S_ISDIR((d1->mode)))
+      return (g_sortflags & GETSDIR_DIRSF) ? 1 : -1;
+  }
+
+  return (g_sortflags & GETSDIR_RSORT)
+          ? strcmp(d2->fname, d1->fname) : strcmp(d1->fname, d2->fname);
+
+} /* namecmpr */
+
+
+/*
+ * name:	timecmpr
+ *
+ * purpose:	return stat to qsort on comparison between time fields in
+ *		directory entry.
+ *
+ * synopsis:	static in timecmpr(d1, d2)
+ *		GETSDIR_ENTRY *d1;
+ *		GETSDIR_ENTRY *d2;
+ *
+ * input:	See explanation of qsort
+ *
+ * process:	See explanation of qsort
+ *
+ * output:	See explanation of qsort
+ *
+ * notes:	See explanation of qsort
+ */
+static int timecmpr(GETSDIR_ENTRY *d1, GETSDIR_ENTRY *d2)
+{
+  if (g_sortflags & (GETSDIR_DIRSF | GETSDIR_DIRSL)) {
+    if (S_ISDIR((d1->mode)) && !S_ISDIR((d2->mode)))
+      return (g_sortflags & GETSDIR_DIRSF) ? -1 : 1;
+    else if (S_ISDIR((d2->mode)) && ! S_ISDIR((d1->mode)))
+      return (g_sortflags & GETSDIR_DIRSF) ? 1 : -1;
+  }
+
+  return (g_sortflags & GETSDIR_RSORT)
+         ? (d2->time - d1->time) : (d1->time - d2->time);
+} /* timecmpr */
 
 /*
  * name:	getsdir
@@ -133,112 +195,66 @@ static void free_up(void);	/* free-up used memory */
 int getsdir(const char *dirpath, const char *pattern, int sortflags,
             mode_t modemask, GETSDIR_ENTRY **datptr, int *len)
 {
-  unsigned cnt;		/* data count */
+  unsigned cnt = 0;		/* data count */
 
   DIR *dirp;			/* point to open dir */
   struct dirent *dp;		/* structure of dir as per system */
-  struct stat statbuf;	/* structure of file stat as per system */
+  struct stat statbuf;		/* structure of file stat as per system */
   char fpath[BUFSIZ];		/* filename with dir path prepended */
-  int indx;			/* g-p array indexer */
   int cmprstat;
-  DAT_BUF *datb_sav;		/* pointer to previous data buffer */
 
-  g_sortflags = sortflags;		/* for sort funcs */
-  *len = 0;				/* longest name */
-  datb_frst = (DAT_BUF *) NULL;		/* init pointers to first data buff */
-  datb_cur  = (DAT_BUF *) NULL;
+  g_sortflags = sortflags;	/* for sort funcs */
+  *len = 0;			/* longest name */
 
   /* open the specified directory */
   if ((dirp = opendir(dirpath)) == NULL)
     return -1;
 
-  for (cnt = 1; ; ++cnt) {        /* for buffer count 1 to whatever... */
-    datb_sav = datb_cur;	/* save pointer to previous buffer */
+  while ((dp = readdir(dirp)))
+    {
+      if (!strcmp(dp->d_name, "."))
+        continue;
 
-    /* get a new buffer */
-    if ((datb_cur = calloc(1, sizeof(DAT_BUF))) == NULL) {
-      closedir(dirp);
-      return -1;
-    }
+      if ((sortflags & GETSDIR_PARNT) && !strcmp(dp->d_name, ".."))
+        cmprstat = 1;
+      else if (pattern && *pattern)
+        cmprstat = wildmat(dp->d_name, pattern);
+      else
+        cmprstat = 1;
 
-    /* init new buffer link pointer */
-    datb_cur->nxt = NULL;
-
-    if (datb_frst == NULL)		/* if first buff... */
-      datb_frst = datb_cur;		/* ...init first buff pointer */
-    else				/* else... */
-      datb_sav->nxt = datb_cur;		/* ...link to new */
-
-    /* while the current buffer is not full, get directory entries */
-    for (datb_cur->cnt = 0; datb_cur->cnt < MAX_CNT;)
-      if ((dp = readdir(dirp))) {/* get next directory entry */
-	if (!strcmp(dp->d_name, "."))
-	  continue;
-        if ((sortflags & GETSDIR_PARNT) && !strcmp(dp->d_name, ".."))
-          cmprstat = 1;
-        else if (pattern && strlen(pattern))
-          cmprstat = wildmat(dp->d_name, pattern);
-        else
-          cmprstat = 1;
-
-        if (cmprstat) {			/* matching name? */
-          int l;
+      if (cmprstat)
+        {			/* matching name? */
+          *datptr = realloc(*datptr, sizeof(**datptr) * (cnt + 1));
+          if (!*datptr)
+            {
+              free(*datptr);
+              return -1;
+            }
 
           /* copy the filename */
-          strncpy(datb_cur->data[datb_cur->cnt].fname, dp->d_name, MAXNAMLEN);
+          strncpy((*datptr)[cnt].fname, dp->d_name, MAXNAMLEN);
 
           /* get information about the directory entry */
           snprintf(fpath, sizeof(fpath), "%s/%s", dirpath, dp->d_name);
-          if (stat(fpath, &statbuf)) {	/* if error getting stat... */
-#if 0
-            free_up();		/* free-up used memory */
-            closedir(dirp);	/* close file pointer */
-            return -1;		/* nobody home */
-#endif
+          if (stat(fpath, &statbuf))	/* if error getting stat... */
             continue;
-          }
 
           if (modemask && !(S_IFMT & modemask & statbuf.st_mode))
             continue;
 
+          int l;
           if ((l = strlen(dp->d_name)) > *len)
             *len = l;
 
-          datb_cur->data[datb_cur->cnt].time = statbuf.st_mtime;
-          datb_cur->data[datb_cur->cnt].mode = statbuf.st_mode;
+          (*datptr)[cnt].time   = statbuf.st_mtime;
+          (*datptr)[cnt].mode   = statbuf.st_mode;
+          (*datptr)[cnt].cflags = 0;
 
-          ++datb_cur->cnt;	/* bump array index / data count */
+          cnt++;
         }
-      }
-      else
-        break;			/* at end of directory */
-
-    if (datb_cur->cnt < MAX_CNT)/* if less than full buffer... */
-      break;			/* ...all done */
-  }
+    }
 
   closedir(dirp);		/* close file pointer */
-
-  /* get memory for single array */
-  if ((*datptr = (GETSDIR_ENTRY *)calloc(cnt, sizeof(datb_cur->data))) == NULL) {
-    /* couldn't get space, clear everything up */
-    free_up();		/* free-up used memory */
-    return -1;		/* error */
-  }
-
-  /* copy/concatenate the data */
-  cnt = indx = 0;		/* init final count and dest index */
-  do {
-    datb_cur = datb_frst;
-    /* copy data in one swell foop */
-    memcpy(*datptr+indx * MAX_CNT, datb_cur->data, sizeof(datb_cur->data));
-    cnt += datb_cur->cnt;	/* adjust data count */
-    ++indx;			/* bump destination index */
-    datb_frst = datb_cur->nxt;
-    free(datb_cur);		/* free no longer needed buffer */
-  } while (datb_frst);          /* while more to go */
-
-  free_up();	/* free-up used memory */
 
   /* post-process array by option */
   if (cnt && sortflags) {
@@ -254,106 +270,14 @@ int getsdir(const char *dirpath, const char *pattern, int sortflags,
 } /* getsdir */
 
 
-/*
- * name:	free_up
- *
- * purpose:	free up memory allocated for temporary buffers
- *
- * synopsis:	static void freeup()
- *
- * input:	none
- *
- * process:	as under purpose
- *
- * output:	none
- *
- * notes:	none
- */
-
-static void free_up(void)
-{
-  if ((datb_cur = datb_frst) != NULL)	/* start with first */
-    do {                                /* and free 'em all */
-      datb_frst = datb_cur->nxt;
-      free(datb_cur);
-    } while ((datb_cur = datb_frst));
-} /* free_up */
-
-
-/*
- * name:	namecmpr
- *
- * purpose:	return stat to qsort on comparison between name fields in
- *		directory entry.
- *
- * synopsis:	static in namecmpr(d1, d2)
- *		GETSDIR_ENTRY *d1;
- *		GETSDIR_ENTRY *d2;
- *
- * input:	See explanation of qsort
- *
- * process:	See explanation of qsort
- *
- * output:	See explanation of qsort
- *
- * notes:	See explanation of qsort
- */
-static int namecmpr(GETSDIR_ENTRY *d1, GETSDIR_ENTRY *d2)
-{
-  if (g_sortflags & (GETSDIR_DIRSF | GETSDIR_DIRSL)) {
-    if (S_ISDIR((d1->mode)) && !S_ISDIR((d2->mode)))
-      return (g_sortflags & GETSDIR_DIRSF) ? -1 : 1;
-    else if (S_ISDIR((d2->mode)) && ! S_ISDIR((d1->mode)))
-      return (g_sortflags & GETSDIR_DIRSF) ? 1 : -1;
-  }
-
-  return (g_sortflags & GETSDIR_RSORT)
-          ? strcmp(d2->fname, d1->fname) : strcmp(d1->fname, d2->fname);
-
-} /* namecmpr */
-
-
-/*
- * name:	timecmpr
- *
- * purpose:	return stat to qsort on comparison between time fields in
- *		directory entry.
- *
- * synopsis:	static in timecmpr(d1, d2)
- *		GETSDIR_ENTRY *d1;
- *		GETSDIR_ENTRY *d2;
- *
- * input:	See explanation of qsort
- *
- * process:	See explanation of qsort
- *
- * output:	See explanation of qsort
- *
- * notes:	See explanation of qsort
- */
-static int timecmpr(GETSDIR_ENTRY *d1, GETSDIR_ENTRY *d2)
-{
-  if (g_sortflags & (GETSDIR_DIRSF | GETSDIR_DIRSL)) {
-    if (S_ISDIR((d1->mode)) && !S_ISDIR((d2->mode)))
-      return (g_sortflags & GETSDIR_DIRSF) ? -1 : 1;
-    else if (S_ISDIR((d2->mode)) && ! S_ISDIR((d1->mode)))
-      return (g_sortflags & GETSDIR_DIRSF) ? 1 : -1;
-  }
-
-  return (g_sortflags & GETSDIR_RSORT)
-         ? (d2->time - d1->time) : (d1->time - d2->time);
-} /* timecmpr */
-
 
 #ifdef GETSDIR_STANDALONE_TEST
-
 /*
  * debug for getsdir()
  *
  * usage: getsdir <dirpath>
  *
  */
-
 extern char *ctime(void);
 
 void main(int argc, char **argv)
